# rust-rest.rf

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  README.template.md  Reframe.toml  default.conf
.github.template/: setenv.sh
.github.template/workflows/: deploy.yml
src/: config.rs  main.rs  server.rs
static/: index.html
