[package]
authors = ["$param.author_name$ <$param.author_email_lower_case$>"]
edition = "2018"
name = "$name_snake_case$"
version = "$version$"

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
dotenv = "0.15.0"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.6.0"
actix-web-actors = "4.3.0"
actix = "0.13.3"
env_logger = "0.11.1"
